crates/wac-parser/tests/resolution/fail/duplicate-world-export.wac
package test:comp;

world w {
    export x: func();
    export x: func();
}